# solana-fee-vault

./: .gitignore  Anchor.toml  LICENSE  PRE_PUBLISH_CHECKLIST.md  README.md  package-lock.json  package.json
.github/workflows/: anchor.yml  dart.yml
client-dart/: README.md  analysis_options.yaml  pubspec.yaml
client-dart/example/: gasless_transfer_example.dart
client-dart/lib/: fee_vault_client.dart
client-dart/lib/src/anchor/: compute_budget.dart  discriminator.dart  instructions.dart
client-dart/lib/src/client/: fee_vault_client.dart
client-dart/lib/src/transaction/: gasless_transaction_builder.dart
client-dart/lib/src/wallet/: mnemonic_wallet.dart
client-dart/test/: discriminator_test.dart  instructions_test.dart  mnemonic_wallet_test.dart
docs/: ARCHITECTURE.md  SECURITY.md
programs/fee_vault/: Cargo.toml
programs/fee_vault/src/: lib.rs
tests/: fee_vault.ts
