[package]
name = "fee_vault"
version = "0.1.0"
description = "PDA-backed gasless fee sponsor for Solana SPL transfers"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
